Roukopool -> Fixes overflow on procedure page

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -15,7 +15,7 @@ img
  width: 100%
 
 img.media-object
-  min-width: 150px;
+  min-width: 150px
 
 
 .white
@@ -73,9 +73,9 @@ img.media-object
  border-radius: radius
 
 .btn-primary:hover {
-  color: #fff;
-  background-color: black;
-  border-color: black;
+  color: #fff
+  background-color: black
+  border-color: black
 }
 .pl-15
  padding-left: pl_15 !important
@@ -103,7 +103,7 @@ img.media-object
  font-size: 15px
  color: font-color !important
  text-transform: uppercase
- padding-right: 5px;
+ padding-right: 5px
 
  @media screen and (max-width: 640px)
   padding-left: 25px !important
@@ -133,6 +133,9 @@ body .caret
  margin-left: auto
  margin-right: auto
  padding-left: 0px !important
+
+ @media screen and (max-width: 480px)
+    margin-bottom: 25px
 
 .contact
  padding-right: 0px !important
@@ -170,28 +173,35 @@ body .caret
 
 
 .media-body li {
-  list-style: none;
-  padding: 0;
-  margin: 0 0 15px 0;
+  list-style: none
+  padding: 0
+  margin: 0 0 15px 0
 }
 
 .counter {
-  font-size: 18px;
-  margin-right: 15px;
-  border: 1px solid #333;
-  border-radius: 100%;
-  display: inline-block;
-  width: 28px;
-  height: 28px;
-  text-align: center;
+  font-size: 18px
+  margin-right: 15px
+  border: 1px solid #333
+  border-radius: 100%
+  display: inline-block
+  width: 28px
+  height: 28px
+  text-align: center
 }
 /* featured */
 
 .com
-  background: url('../../img/header-bottom-links-01.png') center right no-repeat;
+  background: url('../../img/header-bottom-links-01.png') center right no-repeat
+
+  @media screen and (max-width: 380px)
+    background-position: 100px center !important
 
 .res
-  background: url('../../img/header-bottom-links-02.png') center right no-repeat;
+  background: url('../../img/header-bottom-links-02.png') center right no-repeat
+
+.res a
+  @media screen and (max-width: 380px)
+    padding-right: 35px
 
 .featured a
   color: black
@@ -216,5 +226,27 @@ body .caret
   font-size: 22px
   font-weight: 700
   marging: 5px 0 !important
+
+
+@media screen and (max-width: 480px)
+  .media > div
+    min-width: 100%
+    display: block
+    margin-bottom: 25px
+
+  .media-body
+   width: 100%
+
+  .media-body ol
+    padding-left: 0 !important
+
+   .media-body li
+    margin-bottom: 25px
+    padding-top: 5px
+
+  .media-body span
+    margin-bottom: 0px
+    float: left
+    margin-top: -5px
 
 
